[package]
name = "script-assist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
debug = 0
overflow-checks = false
opt-level = 3
strip = true


[dependencies]
lang-c = "0.14.0"
regex = "1.6.0"
logos = "0.12.1"
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0.87"
strum = "0.24.1"
strum_macros = "0.24.3"